--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "^4.21.2",
     "fluent-ffmpeg": "^2.1.3",
     "uuid": "^11.1.0",
-    "yt-dlp-exec": "^1.0.2"
+    "youtube-dl-exec": "^3.0.19",
+    "yt-dlp-exec": "^1.0.2",
+    "ytdl-core": "^4.11.5"
   }
 }
